Can now toggle favorites

--- a/dckx/Info.plist
+++ b/dckx/Info.plist
@@ -69,5 +69,9 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>xkcd-script.ttf</string>
+	</array>
 </dict>
 </plist>
