--- a/dckx/Info.plist
+++ b/dckx/Info.plist
@@ -33,6 +33,10 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>dckx needs permission to save images to your Photo Library.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>dckx needs permission to save images to your Photo Library.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>xkcd-script.ttf</string>
