--- a/dckx.xcodeproj/xcshareddata/xcschemes/dckx.xcscheme
+++ b/dckx.xcodeproj/xcshareddata/xcschemes/dckx.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8B4F4B9423F5F444008446F4"
-               BuildableName = "dckx.app"
+               BuildableName = "dckx: xkcd.app"
                BlueprintName = "dckx"
                ReferencedContainer = "container:dckx.xcodeproj">
             </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8B4F4B9423F5F444008446F4"
-            BuildableName = "dckx.app"
+            BuildableName = "dckx: xkcd.app"
             BlueprintName = "dckx"
             ReferencedContainer = "container:dckx.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8B4F4B9423F5F444008446F4"
-            BuildableName = "dckx.app"
+            BuildableName = "dckx: xkcd.app"
             BlueprintName = "dckx"
             ReferencedContainer = "container:dckx.xcodeproj">
          </BuildableReference>
