--- a/dckx.xcodeproj/xcshareddata/xcschemes/dckxUITests.xcscheme
+++ b/dckx.xcodeproj/xcshareddata/xcschemes/dckxUITests.xcscheme
@@ -20,25 +20,28 @@
                ReferencedContainer = "container:dckx.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8B4F4BB523F5F445008446F4"
+               BuildableName = "dckxUITests.xctest"
+               BlueprintName = "dckxUITests"
+               ReferencedContainer = "container:dckx.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B4F4BAA23F5F445008446F4"
-               BuildableName = "dckxTests.xctest"
-               BlueprintName = "dckxTests"
-               ReferencedContainer = "container:dckx.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
