Updates to dckx.sqlite and Info.plist; removed SwiftUI-Instrospect dependency

--- a/dckx/Info.plist
+++ b/dckx/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>dckx xkcd reader</string>
+	<string>xkcd reader</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>12</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -35,6 +35,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>dckx needs permission to use your camera for sharing images.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>dckx needs permission to save images to your Photo Library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
