Added IndicatorView and button toggling when loading Comics and What Ifs

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ Dependencies/
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
+fastlane/screenshots/**/*.mp4
 fastlane/test_output
 
 # Code Injection
