--- a/.gitignore
+++ b/.gitignore
@@ -79,8 +79,8 @@ Dependencies/
 
 fastlane/report.xml
 fastlane/Preview.html
-fastlane/screenshots/**/*.png
-fastlane/screenshots/**/*.mp4
+fastlane/screenshots/en-US/*.png
+fastlane/screenshots/en-US/*.mp4
 fastlane/test_output
 
 # Code Injection
